fixed overflow scroll.

--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -1,4 +1,3 @@
-
 .movie-improve-bt-desc {
     font-size: 11px;
     padding-left: 2em;
@@ -32,5 +31,5 @@
 }
 .movie-improve-tab-container {
     height: 400px;
-    overflow: scroll;
+    overflow: auto;
 }
